<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.keng.rockscissorpaper.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LoginText"
        android:id="@+id/textViewLogin"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="IP"
        android:id="@+id/ipLabel"
        android:layout_below="@+id/textViewLogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ipInput"
        android:hint="Enter IP here"
        android:layout_marginStart="21dp"
        android:text="@string/ipInputField"
        android:layout_alignBaseline="@+id/ipLabel"
        android:layout_alignBottom="@+id/ipLabel"
        android:layout_toEndOf="@+id/textViewLogin"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Name"
        android:id="@+id/nameLabel"
        android:layout_below="@+id/ipInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nameInputField"
        android:ems="10"
        android:id="@+id/nameInput"
        android:hint="Enter your name here"
        android:layout_alignBaseline="@+id/nameLabel"
        android:layout_alignBottom="@+id/nameLabel"
        android:layout_alignStart="@+id/ipInput"
        android:layout_alignEnd="@+id/ipInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginButtonText"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/nameInput"
        android:layout_alignStart="@+id/nameInput"
        android:layout_marginTop="41dp" />
</RelativeLayout>
